[package]
name = "kvmi-sys"
version = "0.1.0"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
description = "Rust FFI bindings for libkvmi"
readme = "README.md"
homepage = "https://github.com/Wenzel/kvmi-sys"
repository = "https://github.com/Wenzel/kvmi-sys"
license = "GPL-3.0-only"
keywords = ["KVM", "KVMi", "introspection", "VMI"]
categories = ["external-ffi-bindings"]
links = "kvmi"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.51.1"
